Fixed gap in portfolios

--- a/css/main.css
+++ b/css/main.css
@@ -245,10 +245,34 @@ nav ul li a {
 .image {
     border-radius: 5px;
     max-width: 400px;
-    min-width:200px;
+    width: 100%;
     height: auto;
     display: flex;
     justify-content: center;
+}
+
+@media (max-width: 500px) {
+    .port-row-tiles-1 {
+      gap: 10px;
+    }
+}
+
+@media (min-width: 500px) {
+    .port-row-tiles-1 {
+      gap: 50px;
+    }
+}
+
+@media (max-width: 500px) {
+    .port-row-tiles-2 {
+      gap: 10px;
+    }
+}
+
+@media (min-width: 500px) {
+    .port-row-tiles-2 {
+      gap: 50px;
+    }
 }
 
 .port-row-tile a {
